--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
   <div class="modal-backdrop" id="modalAdminBackdrop" style="display:none">
     <div class="modal">
-        <h3>Agregar Nuevo Administrador</h3>
+        <h3>Agregar Nuevo Usuario</h3>
         <p class="subtitle">Para que el nuevo cliente aparezca en la lista actualice la página y vuelva a iniciar sesión.</p>
         
         <label>Nombre</label>
